refactored login to display error messages
